
ChangeLog for nidaqmx-dummy PKGBUILD

* nidaqmx-dummy-0.0.1-1 (2018-09-11 - AstroFloyd)
	Initial PKGBUILD for nidaqmx-dummy, to be uploaded to AUR