@@ -1,9 +1,7 @@
-# Generated by mksrcinfo v8
-# Tue Sep 18 08:22:58 UTC 2018
 pkgbase = nidaqmx-dummy
 	pkgdesc = Dummy library to compile and link code using NI DAQmx under Linux
 	pkgver = 0.1
-	pkgrel = 1
+	pkgrel = 2
 	url = http://doesnotexist.sourceforge.net/
 	changelog = ChangeLog
 	arch = i686
@@ -14,8 +12,7 @@ pkgbase = nidaqmx-dummy
 	arch = aarch64
 	license = GPL3
 	depends = glibc
-	source = http://doesnotexist.sourceforge.net/projects/doesnotexist/files/nidaqmx-dummy-0.1.tar.gz
-	sha512sums = f8b29dc52e852035ac6c9c2f38f098f53f78444ddd3b38039ae206a9367198cbe72f95d44b94b86dd0c2fa88f4ad00bf453b050512e62688f629aba1c197a2b3
+	source = NSSDfile://nidaqmx-dummy-0.1.tar.gz
+	sha512sums = SKIP
 
 pkgname = nidaqmx-dummy
-
