@@ -1,7 +1,7 @@
 # Maintainer:   AstroFloyd  < AstroFloyd [at] gmail >
 pkgname=nidaqmx-dummy
 pkgver=0.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Dummy library to compile and link code using NI DAQmx under Linux"
 arch=('i686' 'x86_64' 'arm' 'armv6h' 'armv7h' 'aarch64')
 url="http://doesnotexist.sourceforge.net/"
@@ -9,8 +9,10 @@ license=('GPL3')
 depends=('glibc')
 makedepends=()
 changelog=ChangeLog
-source=("http://doesnotexist.sourceforge.net/projects/doesnotexist/files/$pkgname-$pkgver.tar.gz")
-sha512sums=('f8b29dc52e852035ac6c9c2f38f098f53f78444ddd3b38039ae206a9367198cbe72f95d44b94b86dd0c2fa88f4ad00bf453b050512e62688f629aba1c197a2b3')
+source=("NSSDfile://nidaqmx-dummy-0.1.tar.gz")
+sha512sums=('SKIP')
+
+DLAGENTS+=('NSSDfile::/usr/bin/echo "Please read the Pinned Commment of 2020-06-10 at https://aur.archlinux.org/packages/nidaqmx-dummy and send me an email (https://aur.archlinux.org/account/AstroFloyd) if you want to try this package.  I can then send you the tarball and you can put it next to the PKGBUILD to compile and install it.)"')
 
 prepare() {
   cp etc/Makefile .
@@ -24,5 +26,5 @@ package() {
   mkdir -p ${pkgdir}/usr/include/ ${pkgdir}/usr/lib/
   cp -v src/NIDAQmx.h ${pkgdir}/usr/include/
   cp -v libNIDAQmx.so ${pkgdir}/usr/lib/
-  #cp -v libNIDAQmx.a ${pkgdir}/usr/lib/
+  # cp -v libNIDAQmx.a ${pkgdir}/usr/lib/
 }
